# RustCollSim

./: .gitignore  Cargo.toml  Makefile  README.md  commands.make  compareTimes.scala  notes.md  pair_collision_run.txt  plotter.py  plotter2.py  plotter_col.py  run.sh
analysis/: STEP.py  crashtime.ipynb  reader.py  render.py  render2.py
data/: analysis.ipynb  bench_data_extractor.py  generate_and_run_setups_0.csv  generate_and_run_setups_0_gravity.csv  generate_and_run_setups_0_gravity_lewis.csv  generate_and_run_setups_0_gravity_schwartz.csv  generate_and_run_setups_0_lewis.csv  generate_and_run_setups_0_schwartz.csv  plot_bench.ipynb  result.csv  test_suite_1.csv  test_suite_1.damped.csv  test_suite_1.undamped.csv  test_suite_full.csv  test_suite_varying_time_steps.csv
graphing/: graph.py  graph4thOrder.py
src/: DoublyLinkedList.rs  collision.rs  data.rs  debug.rs  fourthOrderInt.rs  fourth_order_help.rs  gh-main.rs  graphics.rs  hills_force.rs  impact_vel_tracker.rs  kd_tree.rs  kd_tree1.rs  kd_tree2.rs  kick-step-main.rs  lib.rs  main.rs  no_explode.rs  particle.rs  short_range_forcing.rs  sim1D.rs  sim1D_piecewise.rs  simd_particle.rs  simulation_setups.rs  sm-main.rs  soft_collision_queue.rs  system.rs  test_automation.rs  test_collection.rs  test_setup.rs  tests.rs  unit_tests.rs  util.rs  vectors.rs
src/boundary_conditions/: azimuthal_only.rs  mod.rs  open_boundaries.rs  sliding_brick_boundary.rs
src/debug_tools/: mod.rs  overlap.rs
src/design/: basic_population.rs  brute_force_particle_traversal.rs  coords.rs  event_force.rs  (+8 more)
swiftvis/: render.svf
(+18 files in other folders)
