[package]
name = "rust_coll_sim"
version = "0.1.0"
authors = ["Mark Lewis <mlewis@trinity.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# To switch versions - rustup override set nightly

[dependencies]

core_simd = { git = "https://github.com/rust-lang/portable-simd" }