[package]
name = "rust_coll_sim"
version = "0.1.0"
authors = ["Mark Lewis <mlewis@trinity.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# To switch versions - rustup override set nightly
[features]
no_gravity = []
debug_assertions = []
# FIXME: the way early_quit works right now requires no_gravity, as it will finish the big step, during which gravity can change
early_quit = ["no_gravity"]

[dependencies]
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
fastrand = "1.4"
anyhow = "1.0.66"
csv = "1.1.6"


# resvg = "0.23.0"

# piston = "0.53.0"
# piston2d-graphics = "0.42.0"
# pistoncore-glutin_window = "0.69.0"
# piston2d-opengl_graphics = "0.81.0"